adds displayController module to display result

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <header>
                 <h1 class="neon-text">Tic Tac Toe</h1>
             </header>
-            <h2 class="neon-text">It's <span>Player 1</span>'s turn.</h2>
+            <h2 class="neon-text turn-text">It's <span></span>'s turn - <span></span>.</h2>
             <main>
                 <div class="gameboard">
                     <!--<div class="board-cell"></div>-->
@@ -54,6 +54,13 @@
             <footer>
                 <p class="neon-text">Copyright &copy; Anabil Hoque</p>
             </footer>
+        </div>
+    </div>
+    <div class="result-modal-screen">
+        <div class="message">
+            <h1 class="neon-text" id="match-text"></h1>
+            <h2 class="neon-text" id="result-message"></h2>
+            <button type="button">New Game</button>
         </div>
     </div>
     <script src="./tic-tac-toe.js"></script>
