reset form when new game starts

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <div>
                     <label for="username2" class="neon-text">Player 2's name:</label>
-                    <input type="text" id="username2" name="username2" placeholder="Player 2">
+                    <input type="text" id="username2" name="username2" placeholder="Player 2 (AI)">
                 </div>
                 <div><h4 class="neon-text">Game Mode</h4></div>
                 <div>
