updates buttons and gameboard css styles

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <input type="radio" id="hvAIhard" name="game-option" value="hvAIhard">
                 </div>
                 <div>
-                    <button type="submit">Start</button>
+                    <button type="submit" class="neon-text">Start</button>
                 </div>
             </form>
         </div>
@@ -60,7 +60,7 @@
         <div class="message">
             <h1 class="neon-text" id="match-text"></h1>
             <h2 class="neon-text" id="result-message"></h2>
-            <button type="button">New Game</button>
+            <button type="button" class="neon-text">New Game</button>
         </div>
     </div>
     <script src="./tic-tac-toe.js"></script>
